fix(actions): resolved syntax

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
-on: [push, pull-request]
+on: [push, pull_request]
 jobs:
   runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
-      with
+      with:
         node-version: '14'
     - run: npm ci
     - name: Semantic Release
