fix(actions): added release field

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/pranaykumar389/learn-github-actions#readme",
   "devDependencies": {
     "semantic-release": "^19.0.3"
+  },
+  "release": {
+    "branches": ["main"]
   }
 }
